fix services carousel content visibility

--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -62,20 +62,13 @@ label:hover {
   cursor: pointer;
 }
 
-.content-test {
+.content-test{
   position: absolute;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
   transform: translateY(100%);
   height: 50%;
   width: 100%;
-  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-  /* visibility: hidden; */
+  transition: opacity 3s ease-out, transform 3s ease-out;
   pointer-events: none;
-}
-
-.content-test p {
   max-width: 50%;
   text-align: center;
 }
@@ -84,6 +77,9 @@ label:hover {
   width: 100%;
   flex: 1 0 auto;
   height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 input:checked ~ #right-zone .content-test .content-test.h1 {
@@ -110,9 +106,7 @@ input:checked ~ #right-zone .content-test .content-test.h1 {
 
   .content-test {
     width: 65%;
-    height: 100%;
-    pointer-events: auto;
-    transform: translateY(-10%);
+    transform: translateY(0%);
   }
 
   #left-zone {
